# weather

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  install.rst  pyproject.toml  requirements.txt
conf/: nginx.conf
templates/: base.html
weather/: settings.py  urls.py
weather_app/: forms.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
weather_app/migrations/: 0001_initial.py
weather_app/templates/: weather.html
